tests/baselines/reference/thisInSuperCall3.errors.txt
==== tests/cases/compiler/thisInSuperCall3.ts (1 errors) ====
    class Base { 
        constructor(a: any) {}
    }
    
    class Foo extends Base {
        public x: number = 0;
    
        constructor() {
            super(this);
                  ~~~~
!!! error TS2097: 'this' cannot be referenced in current location.
        }
    }
    